--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -46,7 +46,6 @@
   input {
     width: 100%;
     height: 40px;
-    border: 0;
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.05);
     font-size: 16px;
@@ -60,5 +59,22 @@
       border-color: darken(#fff4e2, 15%);
       box-shadow: 0 0 0 3px rgb(229 160 64 / 12%);
     }
+  }
+}
+
+.loginButton {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  cursor: pointer;
+  font-weight: 500;
+  margin-left: 15px;
+
+  svg {
+    margin-right: 10px;
+  }
+
+  &:hover {
+    color: #e5a040;
   }
 }
